style.css
/* Universal reset */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

/* Landing page styling */
body {
  font-family: "Roboto", sans-serif;
  color: #fff;
  /* background: linear-gradient(45deg, #8589FF 0%, #E8E9FF 100%); */
  width: 100%;
  height: 100vh;
  display: flex;
  flex-direction: column;
}

.landing-page-container {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  height: 85vh;
  padding: 1rem;
}

.main-content-container {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  height: 85vh;
}

.main-content-hero {
  padding: 1rem;
}

.image-container {
  display: flex;
  justify-content: flex-end;
}

.big-temp {
  font-size: 7.5rem;
  font-weight: 300;
}

.big-temp-degrees {
  font-size: 2.5rem;
}

.weather-info {
  display: flex;
  flex-direction: column;
  margin-bottom: 2rem;
}

.sunrise-sunset {
  display: flex;
  flex-direction: column;
  opacity: 0.7;
}

.main-sunrise-sunset {
  display: flex;
  flex: row;
  gap: 2rem;
  opacity: 0.7;
}

.sunrise-sunset p {
  display: inline-block;
  margin-bottom: 1rem;
  margin-right: 1rem;
}

.icon-button {
  background-color: transparent;
  border: none;
  cursor: pointer;
  display: inline-flex;
  justify-content: flex-start;
  max-width: fit-content;
  margin-left: auto;
}

.icon-button img {
  width: 5rem;
  height: 5rem;
}

.weather-icon {
  width: 10rem;
  height: 10rem;
}

/* MAIN PAGE TEMP TABLE */
.main-temp-table {
  width: 100vw; /* Full viewport width */
  height: auto;
  max-width: 100%; /* Prevent overflow */
  background: #fff;
  padding: 20px;
  display: flex;
  flex-direction: column;
  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
  color: darkslategray;
  gap: 1rem;
}

.main-temp-table-img {
  width: 2rem;
  height: 2rem;
}

.main-temp-table-row {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

/* Hamburger Menu */
.menu-icon {
  display: flex;
  flex-direction: column;
  cursor: pointer;
  user-select: none;
  position: absolute;
  top: 60px;
  left: 20px;
}

.menu-icon span {
  display: block;
  width: 25px;
  height: 3px;
  margin: 3px 0;
  background: #ffffff;
  border-radius: 3px;
  transition: transform 0.4s ease, opacity 0.4s ease;
}

.menu-icon.open span:nth-child(1) {
  transform: translateY(9px) rotate(-45deg);
}

.menu-icon.open span:nth-child(2) {
  opacity: 0;
}

.menu-icon.open span:nth-child(3) {
  transform: translateY(-9px) rotate(45deg);
}

/* Navbar styling */
.navbar {
  position: absolute;
  top: 90px; /* Adjust this if needed based on menu icon height */
  left: 20px;
  width: 50vw; /* 50% of the viewport width */
  background-color: rgba(0, 0, 0, 0.3); /* Black with 30% transparency */
  color: #fff;
  padding: 10px;
  display: none; /* Hidden by default */
  border-radius: 5px;
}

.navbar.open {
  display: block;
}

.navbar ul {
  list-style: none;
  padding: 0;
  margin: 0;
}

.navbar li {
  padding: 8px 0;
  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
}

/* Remove border from last item */
.navbar li:last-child {
  border-bottom: none;
}

body.daytime {
  background: linear-gradient(90deg, #8589ff, #e8e9ff);
}

body.nighttime {
  background: linear-gradient(270deg, #6264a2, #222350);
}

/* Tablet view */
@media (min-width: 668px) {
  .container {
    width: 90%;
    margin: 0 auto;
    padding: 1rem;
  }
  
  .big-temp {
    font-size: 8rem;
  }
  
  /* Adjust navbar and hamburger icon positions */
  .navbar {
    left: calc((100% - 90%) / 2 + 20px);
  }
  .menu-icon {
    left: calc((100% - 90%) / 2 + 20px);
  }
}

/* Desktop view */
@media (min-width: 1024px) {
  .container {
    width: 80%;
    margin: 0 auto;
    padding: 2rem;
  }
  
  .big-temp {
    font-size: 9rem;
  }
  
  /* Adjust navbar and hamburger icon positions */
  .navbar {
    left: calc((100% - 80%) / 2 + 20px);
  }
  .menu-icon {
    left: calc((100% - 80%) / 2 + 20px);
  }

}

